@@ -9,7 +9,7 @@
 	<status>RC1</status>
 	<status>Beta</status>
 	
-	<build>Build 2761</build>
+	<build>Build 2762</build>
 	<name>toendaCMS</name>
 	<tagline>Your ideas ahead</tagline>
 	<release_date>03.06.2007 - 16:29</release_date>
